--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,43 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <title>Angie Ta</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
+    <meta charset="utf-8">
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="content">
+      <div class="float-left">
+      <div class="card" >
+        <div class="item left">
+          <h1>Angie Ta</h1>
+          <div id="icons">
+            <a href="https://www.instagram.com/angieesque/" target="_blank">
+              <img border="0" alt="instagram" src="images/svg/instagram.svg" class="header_icon">
+            </a>
+            <a href="https://www.linkedin.com/in/angie-ta/" target="_blank" class="icon">
+              <img border="0" alt="linkedin" src="images/svg/linkedin.svg" class="header_icon">
+            </a>
+            <a href="https://www.facebook.com/angie.ta.31" target="_blank" class="icon">
+              <img border="0" alt="facebook" src="images/svg/facebook.svg" class="header_icon">
+            </a>
+            <a href="mailto:angielisata@gmail.com" class="icon">
+              <img border="0" alt="email" src="images/svg/envelope.svg" class="header_icon">
+            </a>
+            <a href="https://github.com/angielt" class="icon">
+              <img border="0" alt="github" src="images/svg/github.svg" class="header_icon">
+            </a>
+          </div>
+        </div>
+      </div>
+
+      </div>
+
+      <div class="item right" id="root"></div>
+    <div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
