--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,9 @@
 
       </div>
 
-      <div class="item right" id="root"></div>
+      <div class="item right" id="item-right">
+
+      </div>
     <div>
 
     <!--
