--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
               <img border="0" alt="github" src="images/svg/github.svg" class="header_icon">
             </a>
           </div>
+          <p id="side_text">Connect with me!</p>
         </div>
       </div>
 
