--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149512895-1"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -36,53 +34,16 @@
     -->
     <title>Angie Ta</title>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>React App</title>
   </head>
   <body>
     <div id="content">
-      <div class="float-left">
-      <div class="card" >
-        <div class="item left">
-          <h1>Angie Ta</h1>
-          <div id="icons">
-            <a href="https://www.instagram.com/angieesque/" target="_blank">
-              <img border="0" alt="instagram" src="images/svg/instagram.svg" class="header_icon">
-            </a>
-            <a href="https://www.linkedin.com/in/angie-ta/" target="_blank" class="icon">
-              <img border="0" alt="linkedin" src="images/svg/linkedin.svg" class="header_icon">
-            </a>
-            <a href="https://www.facebook.com/angie.ta.31" target="_blank" class="icon">
-              <img border="0" alt="facebook" src="images/svg/facebook.svg" class="header_icon">
-            </a>
-            <a href="mailto:angielisata@gmail.com" class="icon">
-              <img border="0" alt="email" src="images/svg/envelope.svg" class="header_icon">
-            </a>
-            <a href="https://github.com/angielt" class="icon">
-              <img border="0" alt="github" src="images/svg/github.svg" class="header_icon">
-            </a>
-          </div>
-          <p id="side_text">Connect with me!</p>
-        </div>
-      </div>
 
-      </div>
 
-      <div class="item right" id="item-right">
 
-      </div>
     <div>
 
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
 </html>
