--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,13 @@
 
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="author" content="Angie Ta" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="keywords" content="React, Developer, Front-end, Resume, Career" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="React Digital Resume"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -37,13 +39,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>React App</title>
+    <title>Angie Ta</title>
   </head>
   <body>
     <div id="content">
 
+    </div>
+    <script>
+    window.onbeforeunload = function () {
+           window.scrollTo(0, 0);
 
-
-    <div>
+       };
+    </script>
 
 </html>
